--- a/increment-version/package.json
+++ b/increment-version/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "send-slack-message",
+  "name": "increment-version",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@slack/webhook": "^6.1.0"
+    "@actions/core": "^1.6.0",
+    "@actions/github": "^5.0.0",
+    "axios": "^0.26.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.19",
-    "typescript": "^4.5.5",
-    "@actions/core": "^1.6.0",
-    "@actions/github": "^5.0.0"
+    "@octokit/rest": "^18.12.0",
+    "@octokit/types": "^6.34.0"
   }
 }
