Add type parameterg

--- a/.github/workflows/ecs_build.yml
+++ b/.github/workflows/ecs_build.yml
@@ -4,6 +4,7 @@ on:
     inputs:
       repo_name:
         required: true
+        type: string
     secrets:
       MANAGEMENT_ACCOUNT:
         required: true
