--- a/.github/workflows/ecs_build.yml
+++ b/.github/workflows/ecs_build.yml
@@ -32,7 +32,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com
-      - uses: MancunianSam/github-actions/increment-version@v2
+      - uses: MancunianSam/github-actions/increment-version@main
         id: increment
         with:
           repo_name: ${{ inputs.repo_name }}
