--- a/.github/workflows/ecs_build.yml
+++ b/.github/workflows/ecs_build.yml
@@ -34,8 +34,7 @@ jobs:
           registry: ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com
       - uses: MancunianSam/github-actions/increment-version@main
         id: increment
-        with:
-          repo_name: ${{ inputs.repo_name }}
+        run: echo "::set-output name=next_version::$(python get_next_version.py)"
       - name: Build new image version
         env:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_PAT }}
