--- a/.github/workflows/ecs_build.yml
+++ b/.github/workflows/ecs_build.yml
@@ -32,9 +32,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com
-      - uses: MancunianSam/github-actions/increment-version@main
+      - run: echo "::set-output name=next_version::$(python get_next_version.py)"
         id: increment
-        run: echo "::set-output name=next_version::$(python get_next_version.py)"
       - name: Build new image version
         env:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_PAT }}
