--- a/.github/workflows/ecs_build.yml
+++ b/.github/workflows/ecs_build.yml
@@ -32,7 +32,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com
-      - run: echo "::set-output name=next_version::$(python get_next_version.py)"
+      - run: echo "::set-output name=next_version::$(python .github/scripts/get_next_version.py)"
         id: increment
       - name: Build new image version
         env:
