--- a/increment-version/action.yml
+++ b/increment-version/action.yml
@@ -1,5 +1,9 @@
 name: 'Increment version'
 description: 'Gets the most recent tag and increments by one'
+inputs:
+  repo_name:
+    description: 'The repo name'
+    required: true
 runs:
   using: 'node16'
   main: 'dist/index.js'
