--- a/.github/workflows/ecs_build.yml
+++ b/.github/workflows/ecs_build.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: MancunianSam/github-actions/increment-version@main
         id: increment
         with:
-          repo_name: ${{ inputs.repo_name }}
+          repo_name: tdr-${{ inputs.repo_name }}
       - name: Build new image version
         env:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_PAT }}
