--- a/increment-version/package.json
+++ b/increment-version/package.json
@@ -10,11 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "@actions/core": "^1.6.0",
-    "@actions/github": "^5.0.0",
-    "axios": "^0.26.0"
+    "@actions/github": "^5.0.0"
   },
   "devDependencies": {
-    "@octokit/rest": "^18.12.0",
-    "@octokit/types": "^6.34.0"
+    "@octokit/rest": "^18.12.0"
   }
 }
