--- a/increment-version/package.json
+++ b/increment-version/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.6.0",
+    "@actions/exec": "^1.1.0",
     "@octokit/rest": "^18.12.0"
   },
   "devDependencies": {
