--- a/.github/workflows/ecs_test.yml
+++ b/.github/workflows/ecs_test.yml
@@ -8,6 +8,8 @@ on:
     secrets:
       MANAGEMENT_ACCOUNT:
         required: true
+      SLACK_WEBHOOK:
+        required: true
 
 jobs:
   pre-deploy:
@@ -17,6 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - uses: coursier/cache-action@v6
+      - uses: MancunianSam/github-actions/.github/actions/run-git-secrets
       - name: Configure AWS credentials from management account
         uses: aws-actions/configure-aws-credentials@v1
         with:
