--- a/.github/actions/run-git-secrets/action.yml
+++ b/.github/actions/run-git-secrets/action.yml
@@ -15,5 +15,5 @@ runs:
     - uses: MancunianSam/github-actions/.github/actions/slack-send@main
       if: failure()
       with:
-        message: Secrets found in repository
+        message: Secrets found in repository ${{ inputs.repo_name }}
         slack-url: ${{ inputs.slack-url }}
