--- a/.github/actions/run-git-secrets/action.yml
+++ b/.github/actions/run-git-secrets/action.yml
@@ -10,7 +10,13 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: scan.sh
+    - run: |
+        git clone https://github.com/awslabs/git-secrets.git
+        make install -C git-secrets
+        git-secrets --register-aws --global
+        git-secrets --add --global '([^0-9])*[0-9]{12}([^0-9])*'
+        git-secrets --add --global --allowed '1234'
+        git-secrets --scan
       shell: bash
     - uses: MancunianSam/github-actions/.github/actions/slack-send@main
       if: failure()
