--- a/.github/actions/slack-send/action.yml
+++ b/.github/actions/slack-send/action.yml
@@ -14,5 +14,5 @@ runs:
       shell: bash
     - run: |
         import requests
-        requests.send(${{ inputs.slack-url }}, json={"text" : "${{ inputs.message }}" })
+        requests.send("${{ inputs.slack-url }}", json={"text" : "${{ inputs.message }}"})
       shell: python
