--- a/.github/workflows/ecs_test.yml
+++ b/.github/workflows/ecs_test.yml
@@ -21,9 +21,11 @@ jobs:
     steps:
       - uses: coursier/cache-action@v6
       - uses: MancunianSam/github-actions/.github/actions/run-git-secrets@main
+      - uses: MancunianSam/github-actions/.github/actions/slack-send@main
+        if: failure()
         with:
-          slack-url: ${{ secrets.SLACK_WEBHOOK }}
-          repo-name: ${{ inputs.repo-name }}
+          message: Secrets found in repository ${{ inputs.repo_name }}
+          slack-url: ${{ inputs.slack-url }}
       - name: Configure AWS credentials from management account
         uses: aws-actions/configure-aws-credentials@v1
         with:
