--- a/.github/actions/run-git-secrets/Dockerfile
+++ b/.github/actions/run-git-secrets/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine
-RUN apk add --no-cache git make && \
+RUN apk add --no-cache git make bash && \
     git clone https://github.com/awslabs/git-secrets.git && \
     make install -C git-secrets && \
     git-secrets --register-aws --global && \
