--- a/.github/workflows/ecs_test.yml
+++ b/.github/workflows/ecs_test.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: intg
     steps:
-      - uses: coursier/cache-action@v6
+      - uses: actions/checkout@v2
       - uses: MancunianSam/github-actions/.github/actions/run-git-secrets@main
       - uses: MancunianSam/github-actions/.github/actions/slack-send@main
         if: failure()
@@ -32,4 +32,5 @@ jobs:
           role-to-assume: arn:aws:iam::${{ secrets.MANAGEMENT_ACCOUNT }}:role/TDRGithubActionsRoleMgmt
           aws-region: eu-west-2
           role-session-name: APIDownloadDependencies
+      - uses: coursier/cache-action@v6
       - run: ${{ inputs.test_command }}
