--- a/.github/actions/run-git-secrets/Dockerfile
+++ b/.github/actions/run-git-secrets/Dockerfile
@@ -5,4 +5,5 @@ RUN apk add --no-cache git make bash && \
     git-secrets --register-aws --global && \
     git-secrets --add --global '([^0-9])*[0-9]{12}([^0-9])*' && \
     git-secrets --add --global --allowed '1234'
-CMD git-secrets --scan
+COPY entrypoint.sh /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
