Pass in the repo

--- a/.github/actions/run-git-secrets/action.yml
+++ b/.github/actions/run-git-secrets/action.yml
@@ -1,5 +1,9 @@
 name: 'Git Secrets'
 description: 'Runs git secrets'
+inputs:
+  repo-name:
+    description: 'The repository name'
+    required: true
 runs:
   using: 'docker'
   image: 'Dockerfile'
