--- a/.github/workflows/ecs_test.yml
+++ b/.github/workflows/ecs_test.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: MancunianSam/github-actions/.github/actions/run-git-secrets@main
+        with:
+          repo-name: ${{ inputs.repo-name }}
       - uses: MancunianSam/github-actions/.github/actions/slack-send@main
         if: failure()
         with:
