--- a/.github/actions/run-git-secrets/Dockerfile
+++ b/.github/actions/run-git-secrets/Dockerfile
@@ -1,9 +1,6 @@
 FROM alpine
 RUN apk add --no-cache git make bash && \
     git clone https://github.com/awslabs/git-secrets.git && \
-    make install -C git-secrets && \
-    git-secrets --register-aws --global && \
-    git-secrets --add --global '([^0-9])*[0-9]{12}([^0-9])*' && \
-    git-secrets --add --global --allowed '1234'
+    make install -C git-secrets
 COPY entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
