Use valid python

--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -47,8 +47,8 @@ jobs:
         shell: python
       - id: get-role-name
         run: |
-          title_env = ${{ inputs }}".title()
-          print f"::set-output name=role-name::TDRUpdateWAFAndSecurityGroupsRole{title_env}
+          title_env = "${{ inputs }}".title()
+          print f"::set-output name=role-name::TDRUpdateWAFAndSecurityGroupsRole{title_env}"
         shell: python
       - name: Set feature file names
         id: generate-files
