Use valid python

--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -48,7 +48,7 @@ jobs:
       - id: get-role-name
         run: |
           title_env = "${{ inputs }}".title()
-          print f"::set-output name=role-name::TDRUpdateWAFAndSecurityGroupsRole{title_env}"
+          print(f"::set-output name=role-name::TDRUpdateWAFAndSecurityGroupsRole{title_env}")
         shell: python
       - name: Set feature file names
         id: generate-files
