Get the right input

--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -47,7 +47,7 @@ jobs:
         shell: python
       - id: get-role-name
         run: |
-          title_env = "${{ inputs }}".title()
+          title_env = "${{ inputs.environment }}".title()
           print(f"::set-output name=role-name::TDRUpdateWAFAndSecurityGroupsRole{title_env}")
         shell: python
       - name: Set feature file names
