--- a/.github/workflows/run_e2e_tests.yml
+++ b/.github/workflows/run_e2e_tests.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: ${{ needs.setup-e2e-tests.outputs.role-name }}
+          role-to-assume: arn:aws:iam::${{ secrets.ACCOUNT_NUMBER }}:role/${{ needs.setup-e2e-tests.outputs.role-name }}
           aws-region: eu-west-2
           role-session-name: UpdateWAF
       - name: Update security group
