--- a/.github/workflows/ecs_deploy.yml
+++ b/.github/workflows/ecs_deploy.yml
@@ -19,6 +19,8 @@ on:
         required: true
       WORKFLOW_PAT:
         required: true
+      SLACK_WEBHOOK:
+        required: true
 
 permissions:
   id-token: write
