--- a/.github/workflows/ecs_build.yml
+++ b/.github/workflows/ecs_build.yml
@@ -41,6 +41,7 @@ jobs:
           import requests
           json = requests.get("${{ github.api_url }}/repos/nationalarchives/${{ github.event.inputs.repo-name }}/tags").json()
           print(f"::set-output name=new-version::v{int(json[0]['name'][1:4]) + 1}")
+        shell: python
       - name: Build new image version
         env:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_PAT }}
