--- a/.github/workflows/ecs_build.yml
+++ b/.github/workflows/ecs_build.yml
@@ -39,14 +39,14 @@ jobs:
       - id: next-tag
         run: |
           import requests
-          json = requests.get("${{ github.api_url }}/repos/nationalarchives/${{ github.event.inputs.repo-name }}/tags").json()
+          json = requests.get("${{ github.api_url }}/repos/nationalarchives/${{ inputs.repo-name }}/tags").json()
           print(f"::set-output name=new-version::v{int(json[0]['name'][1:4]) + 1}")
         shell: python
       - name: Build new image version
         env:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_PAT }}
         run: |
-          ${{ github.event.inputs.build-command }}
+          ${{ inputs.build-command }}
           docker build -t ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/consignment-api:${{ steps.next-tag.outputs.new-version }} .
           docker push ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/consignment-api:${{ steps.next-tag.outputs.new-version }}
           git tag ${{ steps.next-tag.outputs.new-version }}
