--- a/.github/workflows/ecs_deploy.yml
+++ b/.github/workflows/ecs_deploy.yml
@@ -28,7 +28,7 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: ${{ github.event.inputs.environment }}
+    environment: ${{ inputs.environment }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -44,9 +44,9 @@ jobs:
           registry: ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com
       - name: Tag image
         run: |
-          docker pull ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/${{ github.event.inputs.image-name }}:${{ github.event.inputs.to-deploy }}
-          docker tag ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/${{ github.event.inputs.image-name }}:${{ github.event.inputs.to-deploy }} ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/${{ github.event.inputs.image-name }}:${{ github.event.inputs.environment }}
-          docker push ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/${{ github.event.inputs.image-name }}:${{ github.event.inputs.environment }}
+          docker pull ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/${{ inputs.image-name }}:${{ inputs.to-deploy }}
+          docker tag ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/${{ inputs.image-name }}:${{ inputs.to-deploy }} ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/${{ inputs.image-name }}:${{ inputs.environment }}
+          docker push ${{ secrets.MANAGEMENT_ACCOUNT }}.dkr.ecr.eu-west-2.amazonaws.com/${{ inputs.image-name }}:${{ inputs.environment }}
       - name: Configure AWS credentials for ECS
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -54,28 +54,28 @@ jobs:
           aws-region: eu-west-2
           role-session-name: ECRLogin
       - name: Deploy to ECS
-        run: aws ecs update-service --service ${{ github.event.inputs.service }}_service_${{ github.event.inputs.environment }} --cluster ${{ github.event.inputs.service }}_${{ github.event.inputs.environment }} --force-new-deployment > /dev/null
+        run: aws ecs update-service --service ${{ inputs.service }}_service_${{ inputs.environment }} --cluster ${{ inputs.service }}_${{ inputs.environment }} --force-new-deployment > /dev/null
       - name: Send failure message
         uses: MancunianSam/github-actions/.github/actions/slack-send@main
         with:
-          message: ":white_check_mark: Service ${{ github.event.inputs.image-name }} updated to version ${{ github.event.inputs.to-deploy }} in ${{ github.event.inputs.environment }}"
+          message: ":white_check_mark: Service ${{ inputs.image-name }} updated to version ${{ inputs.to-deploy }} in ${{ inputs.environment }}"
           slack-url: ${{ secrets.SLACK_WEBHOOK }}
       - name: Update release branch
         run: |
-          git branch -f release-${{ github.event.inputs.environment }} HEAD
-          git push -f origin release-${{ github.event.inputs.environment }}
+          git branch -f release-${{ inputs.environment }} HEAD
+          git push -f origin release-${{ inputs.environment }}
       - name: Send failure message
         uses: MancunianSam/github-actions/.github/actions/slack-send@main
         if: failure()
         with:
-          message: ":warning: Build failed for ${{ github.event.inputs.image-name }}"
+          message: ":warning: Build failed for ${{ inputs.image-name }}"
           slack-url: ${{ secrets.SLACK_WEBHOOK }}
       - name: Run E2E tests
-        if: github.event.inputs.environment != 'prod'
+        if: inputs.environment != 'prod'
         uses: octokit/request-action@v2.x
         with:
           route: POST /repos/nationalarchives/tdr-e2e-tests/actions/workflows/ci.yml/dispatches
           ref: master
-          inputs: "{\"environment\": \"${{ github.event.inputs.environment }}\"}"
+          inputs: "{\"environment\": \"${{ inputs.environment }}\"}"
         env:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_PAT }}
