--- a/.github/workflows/ecs_build.yml
+++ b/.github/workflows/ecs_build.yml
@@ -21,7 +21,7 @@ jobs:
   pre-deploy:
     runs-on: ubuntu-latest
     outputs:
-      next-tag: ${{ steps.next-tag.outputs.new-version }}
+      new-version: ${{ steps.next-tag.outputs.new-version }}
     steps:
       - uses: actions/checkout@v2
       - uses: coursier/cache-action@v6
