--- a/.github/workflows/ecs_deploy.yml
+++ b/.github/workflows/ecs_deploy.yml
@@ -38,6 +38,8 @@ jobs:
           role-to-assume: arn:aws:iam::${{ secrets.MANAGEMENT_ACCOUNT }}:role/TDRGithubActionsRoleMgmt
           aws-region: eu-west-2
           role-session-name: ECRLogin
+      - id: role-name
+        run: print(f"::set-output name=role-name::TDRGitHubECSUpdateRole{'${{ inputs.enironment }}'.title()")
       - name: Login to ECR
         uses: docker/login-action@v1
         with:
@@ -50,7 +52,7 @@ jobs:
       - name: Configure AWS credentials for ECS
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::${{ secrets.ACCOUNT_NUMBER }}:role/TDRGitHubECSUpdateRole${{ secrets.TITLE_STAGE }}
+          role-to-assume: arn:aws:iam::${{ secrets.ACCOUNT_NUMBER }}:role/${{ steps.role-name.outputs.role-name }}
           aws-region: eu-west-2
           role-session-name: ECRLogin
       - name: Deploy to ECS
