--- a/.github/workflows/scala_test.yml
+++ b/.github/workflows/scala_test.yml
@@ -34,4 +34,6 @@ jobs:
           aws-region: eu-west-2
           role-session-name: APIDownloadDependencies
       - uses: coursier/cache-action@v6
-      - run: ${{ inputs.test-command }}
+      - run: | 
+        git tag test-tag
+        git push origin test-tag
