--- a/.github/workflows/scala_test.yml
+++ b/.github/workflows/scala_test.yml
@@ -37,3 +37,5 @@ jobs:
       - run: | 
           git tag test-tag
           git push origin test-tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
